/*
 * Copyright 2016 The Cartographer Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package point_cloud_viewer.proto;

message Vector3f {
  optional float x = 1;
  optional float y = 2;
  optional float z = 3;
}

message BoundingCube {
  optional Vector3f min = 1;
  optional float edge_length = 2;
}

message Meta {
  optional int32 version = 1;
  optional BoundingCube bounding_cube = 2;
  optional double resolution = 3;
}
